tests/snapshots/run_wpt_conformance__onnx_lesserOrEqual_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float16 5D tensors",
    "onnx",
    "PASS",
)
